--- a/style.css
+++ b/style.css
@@ -49,3 +49,54 @@ main{
 main:hover{
     /* box-shadow: 5px 5px 30px orange;  */
 }
+#checout-title{
+    margin: 10px;
+    text-align: center;
+    color: lemonchiffon;
+}
+.product{
+    display: flex;
+    align-items: center;
+    margin: 10px 20px;  
+}
+img{
+    width: 180px;
+    height: 180px;
+    border-radius: 20px;   
+    margin-right: 30px;
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+}
+img:hover{
+    opacity: 0.4;
+}
+h2{
+    margin: 5px;
+    color: lemonchiffon;
+}
+p strong {
+    color: orange;
+    margin: 3px;
+}
+p span {
+    text-decoration: line-through;
+    color: lemonchiffon;
+}
+.quantity-controller{
+    display: flex;
+    align-items: center;
+    margin: 5px;
+    border: 1px solid orange;
+    border-radius: 6px;
+    padding: 10px 18px;
+    width: 100px;
+    color: lemonchiffon;
+}
+.quantity-controller:hover{
+   background: rgba(255, 166, 0, 0.122);
+}
+i{
+    border: 1px solid black;
+    padding: 6px;
+    border-radius: 5px;
+    background-color: rgba(255, 166, 0, 0.5);
+}
