--- a/style.css
+++ b/style.css
@@ -100,3 +100,49 @@ i{
     border-radius: 5px;
     background-color: rgba(255, 166, 0, 0.5);
 }
+i:hover{
+    transform: scale(1.1);
+}
+.quantity{
+    margin: 0 24px;
+}
+.remove-product{
+    padding: 7px;
+    border-radius: 7px;    
+    margin: 4px;
+    color: lemonchiffon;
+    background-color: rgba(255, 166, 0, 0.692);
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+}
+.remove-product:hover{
+    opacity: 0.5;
+    transform: scale(1.06);
+}
+.product-line-price{
+    margin: 5px;
+    color: lemonchiffon;
+}
+.price{
+    color: orange;
+}
+/* card start */
+.buy-detail{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px;
+    border-top: 1px solid lemonchiffon;;
+    color: lemonchiffon;
+}
+#subtotalCart{
+    color:orange
+}
+#taxRateCart{
+    color:orange
+}
+#shippingCart{
+    color:orange
+}
+#totalCart{
+    color:orange
+}
